--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,30 @@ header nav ul li {
     line-height: 2em;
 }
 
+/*-----Eventos Personales-----*/
+
+.personales{
+    width: 100%;
+    height: 500px;
+    background-image: url(../images/comprar-mesa-dulce-boda-rojo-blanco4.jpg);
+    background-size: cover;
+    text-align: center;
+    align-content: center;
+    color: white;
+}
+
+.personales-texto{
+    margin: 20px;
+}
+
+.solicita-presupuesto{
+background-color: #ADDCE9;
+    text-align: center;
+    height: 40px;
+    color: white;
+    padding: 4px;
+}
+
 /*-----footer-----*/
 
 .footer {
@@ -311,4 +335,42 @@ header nav ul li {
     margin-top: 15px;
     margin-bottom: 10px;
     font-size: 20px;
+}
+
+/*-----responsive-----*/
+
+@media screen and (max-width: 1060px) {
+    .eventos{
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
+
+@media screen and (max-width: 605px) {
+    .parrafo-servicios {
+    text-align: center;
+    font-size: 16px;
+    width: 100%;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+    background-color: white;
+}
+}
+
+@media screen and (max-width:605px) {
+    .eventos-empresariales img {
+    height: 500px;
+    width: 400px;
+    border: solid 1px white;
+}
+
+
+.eventos-privados img {
+    height: 500px;
+    width: 400px;
+    border: solid 1px white;
+}
 }
