header-color changed

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -124,4 +124,11 @@
   transform: translateY(-10px);
 }
 
+header nav {
+  background-color: #ADDCE9;
+}
+header ul li {
+  font-size: 20px;
+}
+
 /*# sourceMappingURL=estilos.css.map */
