--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -139,3 +139,13 @@
             }
         }
     }
+header{
+    nav{
+         background-color: #ADDCE9;
+    }
+    ul{
+        li{
+            font-size: 20px;
+        }
+    }
+}
