--- a/css/styles.css
+++ b/css/styles.css
@@ -156,20 +156,58 @@ header nav ul li {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: #fbfbfb;
+    padding: 20px;
 
 }
 
-.form-container h2 {
-    font-size: 64px;
+.form{
+    width: 600px;
+    border: #ADDCE9 solid 3px;
+    border-radius: 10px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+
 }
 
-.form-container div {
-    border: 2px solid gray;
+.form ul{
+    padding-left: 0;
+}
+.form ul li{
     display: flex;
     flex-direction: column;
-    height: 600px;
-    width: 400px;
+    margin: 20px;
 }
+
+.form ul li input{
+    height: 50px;
+    width: 500px;
+    margin-top: 6px;
+    border: #ADDCE9 solid 2px;
+    border-radius: 10px;
+    padding-left: 10px;
+
+}
+
+.form ul li textarea{
+    background-color: #fbfbfb;
+    width: 500px;
+    height: 200px;
+    border: #ADDCE9 solid 2px;
+    border-radius: 10px;
+    margin-top: 6px;
+}
+
+.enviar-boton{
+    background-color: #ADDCE9;
+    color: #ffffff;
+    text-decoration: solid;
+
+}
+
+
+
 
 
 /*---Sobre Flora----*/
