--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ header nav ul li {
 
 /*------Servicios-----*/
 
-.titulo-servicios {
+.servicios h2 {
     background-color: #ADDCE9;
     text-align: center;
     height: 40px;
@@ -62,10 +62,9 @@ header nav ul li {
     text-align: center;
     font-size: 19px;
     width: 100%;
-    height: 250px;
     display: flex;
     justify-content: center;
-    padding: 30px 0;
+    padding: 15px 0;
     background-color: white;
 }
 
@@ -74,38 +73,7 @@ header nav ul li {
 
 }
 
-.eventos {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: white;
-}
 
-.eventos div {
-    text-align: center;
-    margin: 20px;
-
-}
-
-.eventos div h3 {
-    color: rgb(12, 12, 12);
-    font-size: 28px;
-}
-
-
-
-
-.eventos-empresariales img {
-    height: 500px;
-    width: 500px;
-    border: solid 1px white;
-}
-
-
-.eventos-privados img {
-    height: 500px;
-    width: 500px;
-    border: solid 1px white;
-}
 
 
 .whatsapp {
