--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -53,27 +53,23 @@
         }
     }
 }
-    .eventos {
+
+.eventos{
+    .eventos-corporativos{
         display: flex;
-        justify-content: space-evenly;
-        background-color: white;
-
-        div {
-            text-align: center;
-            margin: 20px;
-
-            h3 {
-                color: rgb(12, 12, 12);
-                font-size: 28px;
-            }
-
-            img {
-                height: 500px;
-                width: 500px;
-                border: solid 1px white;
-            }
+        h3{
+        p{
+        img{
+        }
+        }
         }
     }
+    .eventos-box{
+        display: flex;
+    }
+        }
+    
+
 
 
 .whatsapp {
