--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,11 +42,17 @@
   width: 800px;
 }
 
-.eventos .eventos-corporativos {
+.eventos {
+  max-width: 1180px;
+  margin: auto;
+}
+.eventos .eventos-tipo {
   display: flex;
 }
-.eventos .eventos-box {
+.eventos .eventos-tipo div {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .whatsapp {
