--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,11 +32,10 @@
   text-align: center;
   font-size: 19px;
   width: 100%;
-  height: 250px;
   display: flex;
   justify-content: center;
-  padding: 30px 0;
   background-color: white;
+  margin: 30px;
 }
 .servicios div p {
   width: 800px;
@@ -48,11 +47,18 @@
 }
 .eventos .eventos-tipo {
   display: flex;
+  margin: 40px;
+}
+.eventos .eventos-tipo img {
+  border-radius: 5%;
+  box-shadow: 7px 7px 12px 0 rgba(20, 20, 20, 0.3);
 }
 .eventos .eventos-tipo div {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: justify;
+  margin: 25px;
 }
 
 .whatsapp {
@@ -120,8 +126,14 @@
 
 header nav {
   background-color: #ADDCE9;
+  margin: auto;
 }
-header ul li {
+header nav div {
+  display: flex;
+  justify-content: center;
+}
+
+ul li {
   font-size: 20px;
 }
 
