--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -42,11 +42,10 @@
         text-align: center;
         font-size: 19px;
         width: 100%;
-        height: 250px;
         display: flex;
         justify-content: center;
-        padding: 30px 0;
         background-color: white;
+        margin: 30px;
 
         p {
             width: 800px;
@@ -59,10 +58,18 @@
     margin: auto;
     .eventos-tipo{
         display: flex;
+        margin: 40px;
+        img{
+            border-radius: 5%;
+            box-shadow: 7px 7px 12px 0 rgba(20, 20, 20, 0.3)
+        }
         div{
             display: flex;
             flex-direction: column;
             justify-content: center;
+            text-align: justify;
+            margin: 25px;
+            
         }
     }
 }
@@ -135,11 +142,17 @@
 header{
     nav{
         background-color: #ADDCE9;
+        margin: auto;
+        div{
+            display: flex;
+        justify-content: center;
+        }
+        }
     }
     ul{
         li{
             font-size: 20px;
         }
     }
-}
+
 
