--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,73 @@
+header nav {
+  background-color: #ADDCE9;
+  margin: auto;
+}
+
+header nav div {
+  display: flex;
+  justify-content: center;
+}
+
+ul li {
+  font-size: 20px;
+}
+
+.footer {
+  position: relative;
+  width: 100%;
+  background: #ADDCE9;
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.footer .social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 10px 5px;
+  flex-wrap: wrap;
+}
+.footer .social-icon .icon-elem {
+  list-style: none;
+}
+.footer .social-icon .icon-elem .icon {
+  color: white;
+  font-size: 32px;
+  display: inline-block;
+  margin: 0 10px;
+  transition: 0.5s;
+}
+.footer .social-icon .icon-elem .icon:hover {
+  transform: translateY(-10px);
+}
+.footer .menu {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+.footer .menu-elem {
+  list-style: none;
+}
+.footer .menu-elem .menu-icon {
+  color: white;
+  font-size: 20px;
+  display: inline-block;
+  text-decoration: none;
+  margin: 5px 10px;
+  opacity: 0.5;
+  transition: 0.3s;
+}
+.footer .menu-elem .menu-icon:hover {
+  opacity: 1;
+}
+
 .hero {
   height: 700px;
   width: 100%;
@@ -61,80 +131,130 @@
   margin: 25px;
 }
 
+/* Sobre Flora */
+.sobreflora div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+.sobreflora div img {
+  border-radius: 7%;
+  box-shadow: 7px 7px 12px 0 rgba(20, 20, 20, 0.3);
+}
+.sobreflora div p {
+  width: 850px;
+  text-align: center;
+}
+.sobreflora h1 {
+  text-align: center;
+  color: #ADDCE9;
+  background-color: white;
+  margin: 20px;
+}
+
+/* Corporativos */
+.hero-corporativos, .personales .hero-personales {
+  width: 100%;
+  height: 500px;
+  background-image: url(../images/eventos_7.jpg);
+  text-align: center;
+  align-content: center;
+  color: #ffffff;
+  background-size: cover;
+}
+
+.corporativos-texto {
+  max-width: 1100px;
+  justify-content: center;
+  margin: auto;
+  padding: 30px;
+}
+.corporativos-texto h3 {
+  color: #ADDCE9;
+}
+.corporativos-texto ul li {
+  font-size: 16px;
+}
+
+.corporativos-section h4 {
+  background-color: #ADDCE9;
+  text-align: center;
+  height: 40px;
+  color: white;
+  padding: 4px;
+}
+
+/*Personales*/
+.personales .hero-personales {
+  background-image: url(../images/comprar-mesa-dulce-boda-rojo-blanco4.jpg);
+}
+.personales .personales-texto {
+  max-width: 1100px;
+  justify-content: center;
+  margin: auto;
+  padding: 30px;
+}
+.personales h4 {
+  background-color: #ADDCE9;
+  text-align: center;
+  height: 40px;
+  color: white;
+  padding: 4px;
+}
+
+/*Contactanos*/
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fbfbfb;
+  padding: 20px;
+}
+.form-container .form {
+  width: 600px;
+  border: #ADDCE9 solid 3px;
+  border-radius: 10px;
+  height: 700px;
+  display: flex;
+  justify-content: center;
+}
+.form-container .form ul {
+  padding-left: 0;
+}
+.form-container .form ul li {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+}
+.form-container .form ul li textarea {
+  background-color: #fbfbfb;
+  width: 500px;
+  height: 200px;
+  border: #ADDCE9 solid 2px;
+  border-radius: 10px;
+  margin-top: 6px;
+}
+.form-container .form ul li input {
+  height: 50px;
+  width: 500px;
+  margin-top: 6px;
+  border: #ADDCE9 solid 2px;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+.enviar-boton {
+  background-color: #ADDCE9;
+  color: #ffffff;
+  text-decoration: solid;
+}
+
 .whatsapp {
   position: fixed;
   right: 20px;
   bottom: 20px;
-}
-
-.footer {
-  position: relative;
-  width: 100%;
-  background: #ADDCE9;
-  min-height: 100px;
-  padding: 20px 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.footer .menu {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
-}
-.footer .menu-elem {
-  list-style: none;
-}
-.footer .menu-elem .menu-icon {
-  color: white;
-  font-size: 20px;
-  display: inline-block;
-  text-decoration: none;
-  margin: 5px 10px;
-  opacity: 0.5;
-  transition: 0.3s;
-}
-.footer .menu-elem .menu-icon:hover {
-  opacity: 1;
-}
-
-.social-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  margin: 10px 5px;
-  flex-wrap: wrap;
-}
-.social-icon .icon-elem {
-  list-style: none;
-}
-.social-icon .icon-elem .icon {
-  color: white;
-  font-size: 32px;
-  display: inline-block;
-  margin: 0 10px;
-  transition: 0.5s;
-}
-.social-icon .icon-elem .icon:hover {
-  transform: translateY(-10px);
-}
-
-header nav {
-  background-color: #ADDCE9;
-  margin: auto;
-}
-header nav div {
-  display: flex;
-  justify-content: center;
-}
-
-ul li {
-  font-size: 20px;
 }
 
 /*# sourceMappingURL=estilos.css.map */
