--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,27 +68,20 @@ ul li {
   opacity: 1;
 }
 
-.hero {
+.carousel div {
+  color: rgb(41, 41, 41);
+  font-size: 90px;
+}
+.carousel div div h2 {
+  position: relative;
+  transform: translateY(-50%);
+}
+.carousel div div img {
   height: 700px;
-  width: 100%;
-  text-align: center;
-  align-content: center;
-  color: white;
-  background-image: url(../images/hero-image2.jpg);
-  background-size: cover;
 }
-.hero h2 {
-  font-size: 42px;
+
+.servicio2 {
   color: white;
-}
-.hero div p {
-  margin-bottom: 25px;
-}
-.hero div a {
-  text-decoration: none;
-  background-color: black;
-  color: white;
-  padding: 10px;
 }
 
 .servicios h2 {
