--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,32 +1,23 @@
-.hero {
-    height: 700px;
-    width: 100%;
-    text-align: center;
-    align-content: center;
-    color: white;
-    background-image: url(../images/hero-image2.jpg);
-    background-size: cover;
-
-    h2 {
-        font-size: 42px;
-        color: white;
+.carousel{
+    div{ 
+        color: rgb(41, 41, 41);
+        font-size: 90px;
+        div{
+            h2{
+                position: relative;
+                transform: translateY(-50%);
+            }
+            img{
+                height: 700px;
+            }
+        }   
     }
 
-    div {
-        p {
-            margin-bottom: 25px;
-
-        }
-
-        a {
-            text-decoration: none;
-            background-color: black;
-            color: white;
-            padding: 10px;
-
-        }
-    }
 }
+.servicio2{
+    color: white;
+}
+
 
 .servicios {
     h2 {
