--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,10 +3,6 @@
         color: rgb(41, 41, 41);
         font-size: 90px;
         div{
-            h2{
-                position: relative;
-                transform: translateY(-50%);
-            }
             img{
                 height: 700px;
             }
@@ -53,6 +49,8 @@
         margin: 40px;
 
         img {
+            height: 500px;
+            width: 500px;
             border-radius: 5%;
             box-shadow: 7px 7px 12px 0 rgba(20, 20, 20, 0.3)
         }
@@ -66,4 +64,20 @@
 
         }
     }
+}
+
+        .whatsapp-button {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 9999;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        color: white;
+        text-align: center;
+        font-size: 24px;
+        line-height: 60px;
+        text-decoration: none;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
